# mnist

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: Tools.cmake  Warnings.cmake
configured/: CMakeLists.txt  config.h.in
include/mnist/: library.h
src/: CMakeLists.txt  library.cpp
tests/: CMakeLists.txt  library.cpp
